// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csharp snapshot 1`] = `
Object {
  "docs": Object {
    "summary": "Properties for defining a \`AWS::ECR::PublicRepository\`.",
  },
  "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
  "properties": Array [
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps.property.RepositoryCatalogData",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
      "optional": true,
      "type": Object {
        "name": "object",
      },
      "usage": "public object RepositoryCatalogData { get; set; }",
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.RepositoryName\`.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps.property.RepositoryName",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryName",
      "optional": true,
      "type": Object {
        "name": "string",
      },
      "usage": "public string RepositoryName { get; set; }",
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps.property.RepositoryPolicyText",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryPolicyText",
      "optional": true,
      "type": Object {
        "name": "object",
      },
      "usage": "public object RepositoryPolicyText { get; set; }",
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.Tags\`.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps.property.Tags",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.tags",
      "optional": true,
      "type": Object {
        "name": "%[]",
        "types": Array [
          Object {
            "name": "%",
            "types": Array [
              Object {
                "fqn": "Amazon.CDK.CfnTag",
                "id": "@aws-cdk/core.CfnTag",
                "packageName": "@aws-cdk/core",
                "packageVersion": "1.106.0",
                "submodule": undefined,
              },
            ],
          },
        ],
      },
      "usage": "public CfnTag[] Tags { get; set; }",
    },
  ],
  "usage": "using Amazon.CDK.AWS.ECR;

new CfnPublicRepositoryProps {
    object RepositoryCatalogData = null,
    string RepositoryName = null,
    object RepositoryPolicyText = null,
    CfnTag[] Tags = null
};",
}
`;

exports[`csharp snapshot 2`] = `
" CfnPublicRepositoryProps <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps\\"></a>

Properties for defining a \`AWS::ECR::PublicRepository\`.

# Initializer <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.Initializer\\"></a>

<pre lang=\\"csharp\\">
using Amazon.CDK.AWS.ECR;

new CfnPublicRepositoryProps {
    object RepositoryCatalogData = null,
    string RepositoryName = null,
    object RepositoryPolicyText = null,
    CfnTag[] Tags = null
};
</pre>

# Properties <a id=\\"Properties\\"></a>

| **Name** | **Type** | **Description** |
| --- | --- | --- |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData\\">RepositoryCatalogData</a></code> | <code>object</code> | \`AWS::ECR::PublicRepository.RepositoryCatalogData\`. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryName\\">RepositoryName</a></code> | <code>string</code> | \`AWS::ECR::PublicRepository.RepositoryName\`. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryPolicyText\\">RepositoryPolicyText</a></code> | <code>object</code> | \`AWS::ECR::PublicRepository.RepositoryPolicyText\`. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.tags\\">Tags</a></code> | <code><a href=\\"#@aws-cdk/core.CfnTag\\">CfnTag</a>[]</code> | \`AWS::ECR::PublicRepository.Tags\`. |

---

## \`RepositoryCatalogData\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData\\"></a>

<pre lang=\\"csharp\\">
public object RepositoryCatalogData { get; set; }
</pre>

- *Type:* object

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

---

## \`RepositoryName\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryName\\"></a>

<pre lang=\\"csharp\\">
public string RepositoryName { get; set; }
</pre>

- *Type:* string

\`AWS::ECR::PublicRepository.RepositoryName\`.

---

## \`RepositoryPolicyText\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryPolicyText\\"></a>

<pre lang=\\"csharp\\">
public object RepositoryPolicyText { get; set; }
</pre>

- *Type:* object

\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.

---

## \`Tags\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.tags\\"></a>

<pre lang=\\"csharp\\">
public CfnTag[] Tags { get; set; }
</pre>

- *Type:* <a href=\\"#@aws-cdk/core.CfnTag\\">CfnTag</a>[]

\`AWS::ECR::PublicRepository.Tags\`.

---
"
`;

exports[`java snapshot 1`] = `
Object {
  "docs": Object {
    "summary": "Properties for defining a \`AWS::ECR::PublicRepository\`.",
  },
  "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
  "properties": Array [
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
      "optional": true,
      "type": Object {
        "name": "java.lang.Object",
      },
      "usage": "public java.lang.Object getRepositoryCatalogData();",
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.RepositoryName\`.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps.property.repositoryName",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryName",
      "optional": true,
      "type": Object {
        "name": "java.lang.String",
      },
      "usage": "public java.lang.String getRepositoryName();",
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps.property.repositoryPolicyText",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryPolicyText",
      "optional": true,
      "type": Object {
        "name": "java.lang.Object",
      },
      "usage": "public java.lang.Object getRepositoryPolicyText();",
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.Tags\`.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps.property.tags",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.tags",
      "optional": true,
      "type": Object {
        "name": "java.util.List<%>",
        "types": Array [
          Object {
            "name": "%",
            "types": Array [
              Object {
                "fqn": "software.amazon.awscdk.core.CfnTag",
                "id": "@aws-cdk/core.CfnTag",
                "packageName": "@aws-cdk/core",
                "packageVersion": "1.106.0",
                "submodule": undefined,
              },
            ],
          },
        ],
      },
      "usage": "public java.util.List<CfnTag> getTags();",
    },
  ],
  "usage": "import software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps;

CfnPublicRepositoryProps.builder()
//  .repositoryCatalogData(java.lang.Object)
//  .repositoryName(java.lang.String)
//  .repositoryPolicyText(java.lang.Object)
//  .tags(java.util.List<CfnTag>)
    .build();",
}
`;

exports[`java snapshot 2`] = `
" CfnPublicRepositoryProps <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps\\"></a>

Properties for defining a \`AWS::ECR::PublicRepository\`.

# Initializer <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.Initializer\\"></a>

<pre lang=\\"java\\">
import software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps;

CfnPublicRepositoryProps.builder()
//  .repositoryCatalogData(java.lang.Object)
//  .repositoryName(java.lang.String)
//  .repositoryPolicyText(java.lang.Object)
//  .tags(java.util.List<CfnTag>)
    .build();
</pre>

# Properties <a id=\\"Properties\\"></a>

| **Name** | **Type** | **Description** |
| --- | --- | --- |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData\\">repositoryCatalogData</a></code> | <code>java.lang.Object</code> | \`AWS::ECR::PublicRepository.RepositoryCatalogData\`. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryName\\">repositoryName</a></code> | <code>java.lang.String</code> | \`AWS::ECR::PublicRepository.RepositoryName\`. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryPolicyText\\">repositoryPolicyText</a></code> | <code>java.lang.Object</code> | \`AWS::ECR::PublicRepository.RepositoryPolicyText\`. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.tags\\">tags</a></code> | <code>java.util.List<<a href=\\"#@aws-cdk/core.CfnTag\\">CfnTag</a>></code> | \`AWS::ECR::PublicRepository.Tags\`. |

---

## \`repositoryCatalogData\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData\\"></a>

<pre lang=\\"java\\">
public java.lang.Object getRepositoryCatalogData();
</pre>

- *Type:* java.lang.Object

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

---

## \`repositoryName\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryName\\"></a>

<pre lang=\\"java\\">
public java.lang.String getRepositoryName();
</pre>

- *Type:* java.lang.String

\`AWS::ECR::PublicRepository.RepositoryName\`.

---

## \`repositoryPolicyText\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryPolicyText\\"></a>

<pre lang=\\"java\\">
public java.lang.Object getRepositoryPolicyText();
</pre>

- *Type:* java.lang.Object

\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.

---

## \`tags\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.tags\\"></a>

<pre lang=\\"java\\">
public java.util.List<CfnTag> getTags();
</pre>

- *Type:* java.util.List<<a href=\\"#@aws-cdk/core.CfnTag\\">CfnTag</a>>

\`AWS::ECR::PublicRepository.Tags\`.

---
"
`;

exports[`python snapshot 1`] = `
Object {
  "docs": Object {
    "summary": "Properties for defining a \`AWS::ECR::PublicRepository\`.",
  },
  "fqn": "aws_cdk.aws_ecr.CfnPublicRepositoryProps",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
  "properties": Array [
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepositoryProps.property.repository_catalog_data",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
      "optional": true,
      "type": Object {
        "name": "typing.Any",
      },
      "usage": "repository_catalog_data: typing.Any",
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.RepositoryName\`.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepositoryProps.property.repository_name",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryName",
      "optional": true,
      "type": Object {
        "name": "str",
      },
      "usage": "repository_name: str",
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepositoryProps.property.repository_policy_text",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryPolicyText",
      "optional": true,
      "type": Object {
        "name": "typing.Any",
      },
      "usage": "repository_policy_text: typing.Any",
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.Tags\`.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepositoryProps.property.tags",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.tags",
      "optional": true,
      "type": Object {
        "name": "typing.List[%]",
        "types": Array [
          Object {
            "name": "%",
            "types": Array [
              Object {
                "fqn": "aws_cdk.core.CfnTag",
                "id": "@aws-cdk/core.CfnTag",
                "packageName": "@aws-cdk/core",
                "packageVersion": "1.106.0",
                "submodule": undefined,
              },
            ],
          },
        ],
      },
      "usage": "tags: typing.List[CfnTag]",
    },
  ],
  "usage": "import aws_cdk.aws_ecr

aws_cdk.aws_ecr.CfnPublicRepositoryProps(
  repository_catalog_data: typing.Any = None,
  repository_name: str = None,
  repository_policy_text: typing.Any = None,
  tags: typing.List[CfnTag] = None
)",
}
`;

exports[`python snapshot 2`] = `
" CfnPublicRepositoryProps <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps\\"></a>

Properties for defining a \`AWS::ECR::PublicRepository\`.

# Initializer <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.Initializer\\"></a>

<pre lang=\\"python\\">
import aws_cdk.aws_ecr

aws_cdk.aws_ecr.CfnPublicRepositoryProps(
  repository_catalog_data: typing.Any = None,
  repository_name: str = None,
  repository_policy_text: typing.Any = None,
  tags: typing.List[CfnTag] = None
)
</pre>

# Properties <a id=\\"Properties\\"></a>

| **Name** | **Type** | **Description** |
| --- | --- | --- |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData\\">repository_catalog_data</a></code> | <code>typing.Any</code> | \`AWS::ECR::PublicRepository.RepositoryCatalogData\`. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryName\\">repository_name</a></code> | <code>str</code> | \`AWS::ECR::PublicRepository.RepositoryName\`. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryPolicyText\\">repository_policy_text</a></code> | <code>typing.Any</code> | \`AWS::ECR::PublicRepository.RepositoryPolicyText\`. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.tags\\">tags</a></code> | <code>typing.List[<a href=\\"#@aws-cdk/core.CfnTag\\">CfnTag</a>]</code> | \`AWS::ECR::PublicRepository.Tags\`. |

---

## \`repository_catalog_data\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData\\"></a>

<pre lang=\\"python\\">
repository_catalog_data: typing.Any
</pre>

- *Type:* typing.Any

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

---

## \`repository_name\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryName\\"></a>

<pre lang=\\"python\\">
repository_name: str
</pre>

- *Type:* str

\`AWS::ECR::PublicRepository.RepositoryName\`.

---

## \`repository_policy_text\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryPolicyText\\"></a>

<pre lang=\\"python\\">
repository_policy_text: typing.Any
</pre>

- *Type:* typing.Any

\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.

---

## \`tags\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.tags\\"></a>

<pre lang=\\"python\\">
tags: typing.List[CfnTag]
</pre>

- *Type:* typing.List[<a href=\\"#@aws-cdk/core.CfnTag\\">CfnTag</a>]

\`AWS::ECR::PublicRepository.Tags\`.

---
"
`;

exports[`typescript snapshot 1`] = `
Object {
  "docs": Object {
    "summary": "Properties for defining a \`AWS::ECR::PublicRepository\`.",
  },
  "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
  "properties": Array [
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData",
      "optional": true,
      "type": Object {
        "name": "any",
      },
      "usage": "public readonly repositoryCatalogData: any;",
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.RepositoryName\`.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryName",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryName",
      "optional": true,
      "type": Object {
        "name": "string",
      },
      "usage": "public readonly repositoryName: string;",
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryPolicyText",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryPolicyText",
      "optional": true,
      "type": Object {
        "name": "any",
      },
      "usage": "public readonly repositoryPolicyText: any;",
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.Tags\`.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.tags",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.tags",
      "optional": true,
      "type": Object {
        "name": "%[]",
        "types": Array [
          Object {
            "name": "%",
            "types": Array [
              Object {
                "fqn": "@aws-cdk/core.CfnTag",
                "id": "@aws-cdk/core.CfnTag",
                "packageName": "@aws-cdk/core",
                "packageVersion": "1.106.0",
                "submodule": undefined,
              },
            ],
          },
        ],
      },
      "usage": "public readonly tags: CfnTag[];",
    },
  ],
  "usage": "import { CfnPublicRepositoryProps } from '@aws-cdk/aws-ecr'

const cfnPublicRepositoryProps: CfnPublicRepositoryProps = { ... }",
}
`;

exports[`typescript snapshot 2`] = `
" CfnPublicRepositoryProps <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps\\"></a>

Properties for defining a \`AWS::ECR::PublicRepository\`.

# Initializer <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.Initializer\\"></a>

<pre lang=\\"typescript\\">
import { CfnPublicRepositoryProps } from '@aws-cdk/aws-ecr'

const cfnPublicRepositoryProps: CfnPublicRepositoryProps = { ... }
</pre>

# Properties <a id=\\"Properties\\"></a>

| **Name** | **Type** | **Description** |
| --- | --- | --- |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData\\">repositoryCatalogData</a></code> | <code>any</code> | \`AWS::ECR::PublicRepository.RepositoryCatalogData\`. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryName\\">repositoryName</a></code> | <code>string</code> | \`AWS::ECR::PublicRepository.RepositoryName\`. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryPolicyText\\">repositoryPolicyText</a></code> | <code>any</code> | \`AWS::ECR::PublicRepository.RepositoryPolicyText\`. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.tags\\">tags</a></code> | <code><a href=\\"#@aws-cdk/core.CfnTag\\">CfnTag</a>[]</code> | \`AWS::ECR::PublicRepository.Tags\`. |

---

## \`repositoryCatalogData\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData\\"></a>

<pre lang=\\"typescript\\">
public readonly repositoryCatalogData: any;
</pre>

- *Type:* any

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

---

## \`repositoryName\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryName\\"></a>

<pre lang=\\"typescript\\">
public readonly repositoryName: string;
</pre>

- *Type:* string

\`AWS::ECR::PublicRepository.RepositoryName\`.

---

## \`repositoryPolicyText\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryPolicyText\\"></a>

<pre lang=\\"typescript\\">
public readonly repositoryPolicyText: any;
</pre>

- *Type:* any

\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.

---

## \`tags\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.tags\\"></a>

<pre lang=\\"typescript\\">
public readonly tags: CfnTag[];
</pre>

- *Type:* <a href=\\"#@aws-cdk/core.CfnTag\\">CfnTag</a>[]

\`AWS::ECR::PublicRepository.Tags\`.

---
"
`;
